fix compatibility issue with JDK 1.8